--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 <p>Diana Pelivan</p>
 <p>Emir Emilbek uulu</p>
 <p>Maxim Basanov</p>
+<p>Adis</p>
+<p>Milana Dzhamankulova</p>
+<p>Aqzhol Abdraimov</p>
